Fix copy link alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,6 +113,9 @@ button.close {
   text-shadow: 0 1px 0 #fff;
   opacity: .5;
 }
+.center {
+  align-items: center;
+}
 .hide {
   visibility: hidden;
 }
